fix(SkillsMap): text overflow ellispsis (#507)

--- a/code13/app/client/imports/components/Skills/SkillsMap.less
+++ b/code13/app/client/imports/components/Skills/SkillsMap.less
@@ -67,6 +67,9 @@
       padding-left: 0.25em;
       height: @height;
       line-height: @height;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
       z-index: 1;
       user-select: none;
       .icon {
